[package]
name = "mm2_tool"
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"

# decrypt prefab csv files
bytemuck = { version = "1.16.1", features = ["extern_crate_std"] }
clap = { version = "4.5.7", features = ["derive"] }

# parse serialized haxe files
base64 = "0.22.1"
percent-encoding = "2.3.1"
winnow = "0.6.13"
