[package]
name = "mm2_tool"
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"

# decrypt prefab csv files
bytemuck = { version = "1.16.1", features = ["extern_crate_std"] }
clap = { version = "4.5.7", features = ["derive"] }

# parse serialized haxe files
base64 = "0.22.1"
percent-encoding = "2.3.1"
winnow = "0.6.13"
serde = { version = "1.0.204", features = ["derive"] }
ordered-float = { version = "4.2.1", features = ["serde"] }
serde_json = { version = "1.0.120", optional = true }
vecmap-rs = { version = "0.2.1", features = ["serde"] }

[features]
default = ["export-json"]
export-json = ["dep:serde_json"]
